# bin/src/main/java/be/zlz/kara/bin/dto/v11/OAuth2GrantType.kt
@@ -1,0 +1,7 @@
+package be.zlz.kara.bin.dto.v11
+
+enum class OAuth2GrantType {
+    PASSWORD,
+    IMPLICIT,
+    CLIENT_CREDENTIALS
+}
